<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/stunum"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/num"
        android:textColor="@color/colorSkyblue"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/stuname"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/names"
        android:textColor="@color/colorSkyblue"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/stusex"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/sexs"
        android:textColor="@color/colorSkyblue"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/stuage"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/ages"
        android:textColor="@color/colorSkyblue"
        android:textSize="20sp" />
</LinearLayout>