<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.zhaojiajia.newstudy.XuanXiuKeCheng">

    <LinearLayout
        android:id="@+id/xxkc_imageLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorSkyblue"
        android:orientation="vertical">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/xxkc"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="35sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_below="@id/xxkc_imageLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:id="@+id/xxkc_name"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/name"
            android:textColor="@color/colorSkyblue"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/xxkc_nameedit"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_alignBottom="@id/xxkc_name"
            android:layout_toEndOf="@id/xxkc_name"
            android:background="@drawable/xxkc_editback" />

        <TextView
            android:id="@+id/xxkc_sex"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@id/xxkc_name"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:text="@string/sex"
            android:textColor="@color/colorSkyblue"
            android:textSize="25sp" />

        <RadioGroup
            android:id="@+id/xxkc_radio"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_alignBottom="@id/xxkc_sex"
            android:layout_toEndOf="@id/xxkc_sex"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/xxkc_boy"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/boy"
                android:textColor="@color/colorSkyblue"
                android:textSize="25sp" />

            <RadioButton
                android:id="@+id/xxkc_girl"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/girl"
                android:textColor="@color/colorSkyblue"
                android:textSize="25sp" />
        </RadioGroup>
        <TextView
            android:id="@+id/xxkc_age"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:text="@string/age"
            android:textColor="@color/colorSkyblue"
            android:textSize="25sp"
            android:layout_below="@id/xxkc_radio"/>

        <EditText
            android:id="@+id/xxkc_ageedit"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_alignBottom="@id/xxkc_age"
            android:layout_toEndOf="@id/xxkc_age"
            android:background="@drawable/xxkc_editback" />
        <Button
            android:id="@+id/xxkc_button"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="@drawable/xxkc_buttonback"
            android:layout_below="@id/xxkc_age"
            android:textColor="@color/colorWhite"
            android:text="@string/submit"
            android:textSize="22sp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="50dp"
            />
    </RelativeLayout>

</RelativeLayout>
