<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentView">

    <LinearLayout
        android:id="@+id/stutitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/num"
            android:textColor="@color/colorSkyblue"
            android:textSize="25sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/names"
            android:textColor="@color/colorSkyblue"
            android:textSize="25sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sexs"
            android:textColor="@color/colorSkyblue"
            android:textSize="25sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ages"
            android:textColor="@color/colorSkyblue"
            android:textSize="25sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/stulistview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/stutitle" />
</RelativeLayout>
